@@ -1,5 +1,7 @@
 === master
 
+* Fix CICPHash#select to return CICPHash instance on Ruby 1.9+ (jeremyevans)
+
 * Fix CICPHash#to_s to operate like #inspect on Ruby 1.9+ (jeremyevans)
 
 === 2.0.0 (2021-12-10)
